--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# ignores pwa files
+public/manifest.json
+public/sw.js
+public/workbox-*.js
